@@ -17,52 +17,80 @@ import org.elasticsearch.xcontent.yaml.YamlXContent;
 import java.util.Collections;
 import java.util.List;
 
+import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.containsInAnyOrder;
-import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.emptyOrNullString;
 import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.not;
 import static org.hamcrest.Matchers.notNullValue;
 import static org.hamcrest.Matchers.nullValue;
 
 public class SkipSectionTests extends AbstractClientYamlTestFragmentParserTestCase {
 
-    public void testSkipMultiRange() {
+    public void testSkipVersionMultiRange() {
         SkipSection section = new SkipSection(
             List.of(new VersionSkipCriteria("6.0.0 - 6.1.0, 7.1.0 - 7.5.0")),
             Collections.emptyList(),
             "foobar"
         );
 
-        assertFalse(section.skip(versionContext(Version.CURRENT)));
-        assertFalse(section.skip(versionContext(Version.fromString("6.2.0"))));
-        assertFalse(section.skip(versionContext(Version.fromString("7.0.0"))));
-        assertFalse(section.skip(versionContext(Version.fromString("7.6.0"))));
+        assertFalse(section.skip(versionOnlyContext(Version.CURRENT)));
+        assertFalse(section.skip(versionOnlyContext(Version.fromString("6.2.0"))));
+        assertFalse(section.skip(versionOnlyContext(Version.fromString("7.0.0"))));
+        assertFalse(section.skip(versionOnlyContext(Version.fromString("7.6.0"))));
 
-        assertTrue(section.skip(versionContext(Version.fromString("6.0.0"))));
-        assertTrue(section.skip(versionContext(Version.fromString("6.1.0"))));
-        assertTrue(section.skip(versionContext(Version.fromString("7.1.0"))));
-        assertTrue(section.skip(versionContext(Version.fromString("7.5.0"))));
+        assertTrue(section.skip(versionOnlyContext(Version.fromString("6.0.0"))));
+        assertTrue(section.skip(versionOnlyContext(Version.fromString("6.1.0"))));
+        assertTrue(section.skip(versionOnlyContext(Version.fromString("7.1.0"))));
+        assertTrue(section.skip(versionOnlyContext(Version.fromString("7.5.0"))));
 
         section = new SkipSection(List.of(new VersionSkipCriteria("-  7.1.0, 7.2.0 - 7.5.0, 8.0.0 -")), Collections.emptyList(), "foobar");
-        assertTrue(section.skip(versionContext(Version.fromString("7.0.0"))));
-        assertTrue(section.skip(versionContext(Version.fromString("7.3.0"))));
-        assertTrue(section.skip(versionContext(Version.fromString("8.0.0"))));
+        assertTrue(section.skip(versionOnlyContext(Version.fromString("7.0.0"))));
+        assertTrue(section.skip(versionOnlyContext(Version.fromString("7.3.0"))));
+        assertTrue(section.skip(versionOnlyContext(Version.fromString("8.0.0"))));
     }
 
-    public void testSkip() {
+    public void testSkipVersion() {
         SkipSection section = new SkipSection(
             List.of(new VersionSkipCriteria("6.0.0 - 6.1.0")),
-            randomBoolean() ? Collections.emptyList() : Collections.singletonList("warnings"),
+            Collections.emptyList(),
             "foobar"
         );
-        assertFalse(section.skip(versionContext(Version.CURRENT)));
-        assertTrue(section.skip(versionContext(Version.fromString("6.0.0"))));
-        section = new SkipSection(
-            randomBoolean() ? List.of() : List.of(new VersionSkipCriteria("6.0.0 - 6.1.0")),
+        assertFalse(section.skip(versionOnlyContext(Version.CURRENT)));
+        assertTrue(section.skip(versionOnlyContext(Version.fromString("6.0.0"))));
+    }
+
+    public void testSkipVersionWithTestFeatures() {
+        SkipSection section = new SkipSection(
+            List.of(new VersionSkipCriteria("6.0.0 - 6.1.0")),
+            Collections.singletonList("warnings"),
+            "foobar"
+        );
+        assertFalse(section.skip(versionOnlyContext(Version.CURRENT)));
+        assertTrue(section.skip(versionOnlyContext(Version.fromString("6.0.0"))));
+    }
+
+    public void testSkipTestFeatures() {
+        var section = new SkipSection(
+            randomBoolean() ? List.of() : List.of(context -> false),
             Collections.singletonList("boom"),
             "foobar"
         );
-        assertTrue(section.skip(versionContext(Version.CURRENT)));
+        assertTrue(section.skip(versionOnlyContext(Version.CURRENT)));
+    }
+
+    public void testSkipOs() {
+        var osList = List.of("windows95", "debian-5");
+        SkipSection section = new SkipSection(
+            List.of(new OsSkipCriteria(osList)),
+            randomBoolean() ? Collections.emptyList() : Collections.singletonList("warnings"),
+            "foobar"
+        );
+        assertTrue(section.skip(osOnlyContext("windows95")));
+        assertTrue(section.skip(osOnlyContext("debian-5")));
+        assertFalse(section.skip(osOnlyContext("ms-dos")));
     }
 
     public void testMessage() {
@@ -84,49 +112,33 @@ public class SkipSectionTests extends AbstractClientYamlTestFragmentParserTestCa
             version:     " - %s"
             reason:      Delete ignores the parent param""", version));
 
-        SkipSection skipSection = SkipSection.parse(parser);
-        assertThat(skipSection, notNullValue());
-        // assertThat(skipSection.getLowerVersion(), equalTo(VersionUtils.getFirstVersion()));
-        // assertThat(skipSection.getUpperVersion(), equalTo(version));
-        assertThat(skipSection.getFeatures().size(), equalTo(0));
-        assertThat(skipSection.getReason(), equalTo("Delete ignores the parent param"));
-    }
-
-    public void testParseSkipSectionAllVersions() throws Exception {
-        parser = createParser(YamlXContent.yamlXContent, """
-            version:     " all "
-            reason:      Delete ignores the parent param""");
-
-        SkipSection skipSection = SkipSection.parse(parser);
-        assertThat(skipSection, notNullValue());
-        // assertThat(skipSection.getLowerVersion(), equalTo(VersionUtils.getFirstVersion()));
-        // assertThat(skipSection.getUpperVersion(), equalTo(Version.CURRENT));
-        assertThat(skipSection.getFeatures().size(), equalTo(0));
-        assertThat(skipSection.getReason(), equalTo("Delete ignores the parent param"));
+        var skipSectionBuilder = SkipSection.parseInternal(parser);
+        assertThat(skipSectionBuilder, notNullValue());
+        assertThat(skipSectionBuilder.version, not(emptyOrNullString()));
+        assertThat(skipSectionBuilder.testFeatures.size(), equalTo(0));
+        assertThat(skipSectionBuilder.reason, equalTo("Delete ignores the parent param"));
     }
 
     public void testParseSkipSectionFeatureNoVersion() throws Exception {
         parser = createParser(YamlXContent.yamlXContent, "features:     regex");
 
-        SkipSection skipSection = SkipSection.parse(parser);
-        assertThat(skipSection, notNullValue());
-        assertIsVersionCheck(skipSection, false);
-        assertThat(skipSection.getFeatures().size(), equalTo(1));
-        assertThat(skipSection.getFeatures().get(0), equalTo("regex"));
-        assertThat(skipSection.getReason(), nullValue());
+        var skipSectionBuilder = SkipSection.parseInternal(parser);
+        assertThat(skipSectionBuilder, notNullValue());
+        assertThat(skipSectionBuilder.version, emptyOrNullString());
+        assertThat(skipSectionBuilder.testFeatures, hasSize(1));
+        assertThat(skipSectionBuilder.testFeatures, contains("regex"));
+        assertThat(skipSectionBuilder.reason, nullValue());
     }
 
     public void testParseSkipSectionFeaturesNoVersion() throws Exception {
         parser = createParser(YamlXContent.yamlXContent, "features:     [regex1,regex2,regex3]");
 
-        SkipSection skipSection = SkipSection.parse(parser);
-        assertThat(skipSection, notNullValue());
-        assertIsVersionCheck(skipSection, false);
-        assertThat(skipSection.getFeatures().size(), equalTo(3));
-        assertThat(skipSection.getFeatures().get(0), equalTo("regex1"));
-        assertThat(skipSection.getFeatures().get(1), equalTo("regex2"));
-        assertThat(skipSection.getFeatures().get(2), equalTo("regex3"));
-        assertThat(skipSection.getReason(), nullValue());
+        var skipSectionBuilder = SkipSection.parseInternal(parser);
+        assertThat(skipSectionBuilder, notNullValue());
+        assertThat(skipSectionBuilder.version, emptyOrNullString());
+        assertThat(skipSectionBuilder.testFeatures, hasSize(3));
+        assertThat(skipSectionBuilder.testFeatures, contains("regex1", "regex2", "regex3"));
+        assertThat(skipSectionBuilder.reason, nullValue());
     }
 
     public void testParseSkipSectionBothFeatureAndVersion() throws Exception {
@@ -135,25 +147,24 @@ public class SkipSectionTests extends AbstractClientYamlTestFragmentParserTestCa
             features:     regex
             reason:      Delete ignores the parent param""");
 
-        SkipSection skipSection = SkipSection.parse(parser);
-        // assertEquals(VersionUtils.getFirstVersion(), skipSection.getLowerVersion());
-        // assertEquals(Version.fromString("0.90.2"), skipSection.getUpperVersion());
-        assertEquals(Collections.singletonList("regex"), skipSection.getFeatures());
-        assertEquals("Delete ignores the parent param", skipSection.getReason());
+        var skipSectionBuilder = SkipSection.parseInternal(parser);
+        assertThat(skipSectionBuilder.version, not(emptyOrNullString()));
+        assertThat(skipSectionBuilder.testFeatures, contains("regex"));
+        assertThat(skipSectionBuilder.reason, equalTo("Delete ignores the parent param"));
     }
 
     public void testParseSkipSectionNoReason() throws Exception {
         parser = createParser(YamlXContent.yamlXContent, "version:     \" - 0.90.2\"\n");
 
-        Exception e = expectThrows(ParsingException.class, () -> SkipSection.parse(parser));
+        Exception e = expectThrows(ParsingException.class, () -> SkipSection.parseInternal(parser));
         assertThat(e.getMessage(), is("reason is mandatory within skip version section"));
     }
 
     public void testParseSkipSectionNoVersionNorFeature() throws Exception {
         parser = createParser(YamlXContent.yamlXContent, "reason:      Delete ignores the parent param\n");
 
-        Exception e = expectThrows(ParsingException.class, () -> SkipSection.parse(parser));
-        assertThat(e.getMessage(), is("version, features or os is mandatory within skip section"));
+        Exception e = expectThrows(ParsingException.class, () -> SkipSection.parseInternal(parser));
+        assertThat(e.getMessage(), is("at least one criteria (version, test features, os) is mandatory within a skip section"));
     }
 
     public void testParseSkipSectionOsNoVersion() throws Exception {
@@ -163,12 +174,12 @@ public class SkipSectionTests extends AbstractClientYamlTestFragmentParserTestCa
             reason:      memory accounting broken, see gh#xyz
             """);
 
-        SkipSection skipSection = SkipSection.parse(parser);
-        assertThat(skipSection, notNullValue());
-        assertIsVersionCheck(skipSection, false);
-        assertThat(skipSection.getFeatures().size(), equalTo(2));
-        assertOperatingSystems(skipSection, containsInAnyOrder("debian-9"));
-        assertThat(skipSection.getReason(), is("memory accounting broken, see gh#xyz"));
+        var skipSectionBuilder = SkipSection.parseInternal(parser);
+        assertThat(skipSectionBuilder, notNullValue());
+        assertThat(skipSectionBuilder.version, emptyOrNullString());
+        assertThat(skipSectionBuilder.testFeatures, hasSize(2));
+        assertThat(skipSectionBuilder.operatingSystems, contains("debian-9"));
+        assertThat(skipSectionBuilder.reason, is("memory accounting broken, see gh#xyz"));
     }
 
     public void testParseSkipSectionOsListNoVersion() throws Exception {
@@ -178,11 +189,12 @@ public class SkipSectionTests extends AbstractClientYamlTestFragmentParserTestCa
             reason:      see gh#xyz
             """);
 
-        SkipSection skipSection = SkipSection.parse(parser);
-        assertThat(skipSection, notNullValue());
-        assertIsVersionCheck(skipSection, false);
-        assertOperatingSystems(skipSection, containsInAnyOrder("debian-9", "windows-95", "ms-dos"));
-        assertThat(skipSection.getReason(), is("see gh#xyz"));
+        var skipSectionBuilder = SkipSection.parseInternal(parser);
+        assertThat(skipSectionBuilder, notNullValue());
+        assertThat(skipSectionBuilder.version, emptyOrNullString());
+        assertThat(skipSectionBuilder.testFeatures, hasSize(1));
+        assertThat(skipSectionBuilder.operatingSystems,  containsInAnyOrder("debian-9", "windows-95", "ms-dos"));
+        assertThat(skipSectionBuilder.reason, is("see gh#xyz"));
     }
 
     public void testParseSkipSectionOsNoFeatureNoVersion() throws Exception {
@@ -191,20 +203,7 @@ public class SkipSectionTests extends AbstractClientYamlTestFragmentParserTestCa
             reason:      memory accounting broken, see gh#xyz
             """);
 
-        Exception e = expectThrows(ParsingException.class, () -> SkipSection.parse(parser));
+        Exception e = expectThrows(ParsingException.class, () -> SkipSection.parseInternal(parser));
         assertThat(e.getMessage(), is("if os is specified, feature skip_os must be set"));
-    }
-
-    public void testParseSkipSectionWithThreeDigitVersion() throws Exception {
-        parser = createParser(YamlXContent.yamlXContent, """
-            version:     " - 8.2.999"
-            features:     regex
-            reason:      Now you have two problems""");
-
-        IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> SkipSection.parse(parser));
-        assertThat(
-            e.getMessage(),
-            containsString("illegal revision version format - only one or two digit numbers are supported but found 999")
-        );
     }
 }
